	%magics, !shell escapes and aliases exactly as they are in the
	ipython command line. Should improve backslash experience,
	particularly in Windows. %cd magic still doesn't support backslash
	path delimiters, though. Also deleted all pretense of supporting 
	multiline command strings in !system or %magic commands. Thanks to
	Jerry McRae for suggestions.

2006-01-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ipstruct.py (Struct): Rename IPython.Struct to
	IPython.ipstruct, to avoid local shadowing of the stdlib 'struct'
	module in case-insensitive installation.  Was causing crashes
	under win32.  Closes http://www.scipy.net/roundup/ipython/issue49.

	* IPython/Magic.py (magic_pycat): Fix pycat, patch by Marien Zwart
	<marienz-AT-gentoo.org>, closes
	http://www.scipy.net/roundup/ipython/issue51.

2006-01-11  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellGTK.on_timer): Finally fix the the
	problem of excessive CPU usage under *nix and keyboard lag under
	win32.

2006-01-10  *** Released version 0.7.0

2006-01-10  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Release.py (revision): tag version number to 0.7.0,
	ready for release.

	* IPython/Magic.py (magic_edit): Add print statement to %edit so
	it informs the user of the name of the temp. file used.  This can
	help if you decide later to reuse that same file, so you know
	where to copy the info from.

2006-01-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* setup_bdist_egg.py: little script to build an egg.  Added
	support in the release tools as well.

2006-01-08  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellWX.__init__): add support for WXPython
	version selection (new -wxversion command line and ipythonrc
	parameter).  Patch contributed by Arnd Baecker
	<arnd.baecker-AT-web.de>.

	* IPython/iplib.py (embed_mainloop): fix tab-completion in
	embedded instances, for variables defined at the interactive