@@ -1,0 +1,28 @@
+How to generate IPython documentation
+=====================================
+
+The doc is written using lyx http://www.lyx.org, which is a gui for latex
+documents. LyX also requires a latex installation.
+
+The file manual_base.lyx is the template file that should be edited if you
+want to do changes to the docs.
+
+A final version is generated by running 
+
+./update_manual.py
+
+or 
+
+ipython update_manual.py
+
+(note that "python update_manual.py" won't work, it's an ipython script!)
+
+The script update_manual.py will insert the current version number into the
+template and also generate magic.tex, a file containing documentation for
+the doc strings of the magic commands.
+
+The script creates manual.lyx which can be opened by lyx to generate pdf or
+postscript versions of the docs.
+
+update_magic.sh and update_version.sh work too, but are slated for
+deprecation.
